fix: add 2 more cards pairs and correctly align them

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,9 @@ h2 {
 
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
 
     transform-style: preserve-3d;
     perspective: 500px;
@@ -45,11 +48,14 @@ h2 {
     width: 100px;
     height: 100px;
 
+    display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
-    position: relative;
 
     background-color: #ffffff;
+
+    font-size: 5em;
 }
 
 .reset {
